# cryptorado-rs

./: .dprint.json  .mlc.toml  Cargo.toml  Makefile.toml  README.md  Shuttle.toml
src/: bin.rs  lib.rs  main.rs
static/calendars/: cryptorado-community.ics
